# rainbow-log

./: .clang-format  CMakeLists.txt  license.txt  readme.md
inc/: rlog.h
src/: rlog.c
tests/: tests.c
